# n-sbc

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  tests.yml
nsbc/: __init__.py  base.py  engine.py  estimator.py
tests/: test_sklearn_compatibility.py
