[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsbc"
dynamic = ["version"]
description = "n-SBC: A novel machine learning model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Osvaldo Velazquez", email = "osvaldodvego@gmail.com"},
]
keywords = ["machine-learning", "scikit-learn", "nsbc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true