[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsbc"
dynamic = ["version"]
description = "n-SBC: A novel machine learning model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Osvaldo Velazquez", email = "osvaldodvego@gmail.com"},
]
keywords = ["machine-learning", "scikit-learn", "nsbc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
# Target Python 3.8+
target-version = "py38"

# Line length (same as Black default)
line-length = 88

# Enable pycodestyle (E), pyflakes (F), isort (I), and more
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C90",  # mccabe complexity
]

# Ignore specific rules
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "E203",  # whitespace before ':'
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__ files
"tests/*" = ["D100", "D101", "D102", "D103"]  # No docstrings required in tests

[tool.ruff.isort]
known-first-party = ["nsbc"]

[tool.ruff.mccabe]
max-complexity = 10
